--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,10 +1,17 @@
-.blog-header {
-    line-height: 1;
-    border-bottom: 1px solid #e5e5e5;
+#footer{
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    background-color: black;
+    padding: 20px; /* Add padding to ensure the content is visible */
+    height: auto;  /* Make sure the footer can grow with content */
+    font-weight: bolder;
+    
+    
+
 }
-pb-3, .py-3 {
-    padding-bottom: 1rem !important;
-}
- ::after, ::before {
-    box-sizing: border-box;
-}
+#heading{
+    font-size: large;
+}   
