--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
   <body>
 
     <%- include("partials/header.ejs") %>
+    <hr>
     <p>Welcome to my mini blog where I write about anything and everything.</p>
 
       <!-- This is the break point-->
@@ -19,21 +20,33 @@
           </form>
         </div>
       
-      <hr>
+      
       <div class = "container">
         <h2>Posts</h2>
 
-        <ul>
-          <% Posts.forEach((post, index) => { %>
+        <ul id="postsList">
+          <% Posts.forEach((post) => { %>
             <li>
-              <%= post %>
-              <a id="blog-post" href="/edit?index=<%= index %>">Edit</a>
-              <a id="blog-post" href="/delete?index=<%= index %>">Delete</a>
+              <h2>
+                <%= post.title %>
+              </h2>
+              <small>
+                <%= post.date %>
+              </small>
+              <p>
+                <%= post.content %>
+              </p>
+              <small> By: <%=post.author %> </small>
+              <a id="blog-post" class="edit" href="/edit?index=<%= post.id%>">Edit</a>
+              <a id="blog-post" class="delete" href="/delete?index=<%= post.id%>">Delete</a>
             </li>
             
           <%}); %>
         </ul>
       </div>
+
+
+
 
       <%- include("partials/footer.ejs") %>
 
