--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,17 +10,10 @@
 
     <%- include("partials/header.ejs") %>
     <hr>
-    <p>Welcome to my mini blog where I write about anything and everything.</p>
+    <p >Welcome to my mini blog where I write about anything and everything.</p>
 
       <!-- This is the break point-->
-        <div id="post-id" class="post">
-          <form action="/submit" method="post">
-              <input type="text" name="Cpost" placeholder="Create Post">
-              <input type="submit" value="Post">
-          </form>
-        </div>
-      
-      
+        <a id="newPostBtn" href="/new">New Post</a>
       <div class = "container">
         <h2>Posts</h2>
 
@@ -37,8 +30,8 @@
                 <%= post.content %>
               </p>
               <small> By: <%=post.author %> </small>
-              <a id="blog-post" class="edit" href="/edit?index=<%= post.id%>">Edit</a>
-              <a id="blog-post" class="delete" href="/delete?index=<%= post.id%>">Delete</a>
+              <a id="blog-post" class="edit" href="/edit/<%= post.id%>">Edit</a>
+              <a id="blog-post" class="delete" href="/delete/<%= post.id%>">Delete</a>
             </li>
             
           <%}); %>
