--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="py-5 text-center text-body-secondary bg-body-tertiary" id="footer">
+<footer class="" id="footer">
     <% const d = new Date(); %>
     <% let year = d.getFullYear(); %>
     <p>Blog built by<a href="https://github.com/Musyoka7">Musyoka7</a>.</p>
