--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="" id="footer">
     <% const d = new Date(); %>
     <% let year = d.getFullYear(); %>
-    <p>Blog built by<a href="https://github.com/Musyoka7">Musyoka7</a>.</p>
-    <p class="mb-0">
+    <p>Blog built by<a href="https://github.com/Musyoka7"><i class="fab fa-github"></i>Musyoka7</a>.</p>
+    <p>
         Copyright © <%= year%>
     </p>
   </footer>
