added backgorund colour for better visualization, imported Poppins from google fonts so make the font family more asthetic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,9 @@
     <p id="welcome-line">Welcome to my mini blog where I write about anything and everything.</p>
 
       <!-- This is the break point-->
-        <a id="newPostBtn" href="/new">New Post</a>
+        
       <div class = "container">
-        <h2>Posts</h2>
+        <h2 id="Posts-header">Posts</h2>
 
         <ul id="Posts-List">
           <% Posts.forEach((post) => { %>
