--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 html, body{
-    font-family: "Arial", sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     overflow-x: hidden;
-    background-color:  #f4f4f4;
+    background-color:  #faf5ee;
     
 }
 .container{
@@ -65,7 +67,7 @@ html, body{
     margin-right: 10px;
 }
 p{
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     text-align:left;
     font-size: large;
 }
@@ -108,7 +110,7 @@ input, textarea{
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 .full-width{
     text-align: center;
@@ -117,7 +119,7 @@ input, textarea{
     border: none;
     background-color: #007bff;
     color: white;
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 1em;
     padding: 10px;
 }
@@ -134,5 +136,8 @@ header {
 }
 #Posts-List{
     max-width: 800px;
-    margin: 50px auto;
+    margin: 2px auto;
+}
+h2 #Posts-header{
+    margin: 5px;
 }
