--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,8 +17,11 @@
             <nav id="nav-links">
                 <a href="#">Subscribe</a>
                 <a href="#">Sign up</a>
+                <a id="newPostBtn" href="/new">New Post</a>
             </nav>
+            
         </div>
+        
     </header>
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
