--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
 <body>
     <header id="main-header">
         <div class="container">
-            <a id="blog-title" href="/">THE BIG BOY BLOG</a>
+            <a id="blog-title" href="/">Visionary Vibes</a>
             <nav id="nav-links">
                 <a href="#">Subscribe</a>
                 <a href="#">Sign up</a>
